tests/baselines/reference/deeplyNestedAssignabilityIssue.errors.txt
[91m● [0m[96mdeeplyNestedAssignabilityIssue.ts[0m:[93m22[0m:[93m17[0m  [91mError[0m TS2741
| thing: {}
  [91m▔▔▔▔▔[0m
Property 'a' is missing in type '{}' but required in type 'A'.

'a' is declared here: [96mdeeplyNestedAssignabilityIssue.ts[0m:[93m2[0m:[93m5[0m

  | a: number;
    [96m▔[0mThe expected type comes from property 'thing' which is declared here on type '{ thing: A; }' [96mdeeplyNestedAssignabilityIssue.ts[0m:[93m9[0m:[93m17[0m

  | thing: A;
    [96m▔▔▔▔▔[0m[91m● [0m[96mdeeplyNestedAssignabilityIssue.ts[0m:[93m25[0m:[93m17[0m  [91mError[0m TS2741
| another: {}
  [91m▔▔▔▔▔▔▔[0m
Property 'a' is missing in type '{}' but required in type 'A'.

'a' is declared here: [96mdeeplyNestedAssignabilityIssue.ts[0m:[93m2[0m:[93m5[0m

  | a: number;
    [96m▔[0mThe expected type comes from property 'another' which is declared here on type '{ another: A; }' [96mdeeplyNestedAssignabilityIssue.ts[0m:[93m12[0m:[93m17[0m

  | another: A;
    [96m▔▔▔▔▔▔▔[0m

==== deeplyNestedAssignabilityIssue.ts (2 errors) ====
    interface A {
        a: number;
    }
    
    interface Large {
        something: {
            another: {
                more: {
                    thing: A;
                }
                yetstill: {
                    another: A;
                }
            }
        }
    }
    
    const x: Large = {
        something: {
            another: {
                more: {
                    thing: {}
                    ~~~~~
!!! error TS2741: Property 'a' is missing in type '{}' but required in type 'A'.
!!! related TS2728 deeplyNestedAssignabilityIssue.ts:2:5: 'a' is declared here:
!!! related TS6500 deeplyNestedAssignabilityIssue.ts:9:17: The expected type comes from property 'thing' which is declared here on type '{ thing: A; }'
                },
                yetstill: {
                    another: {}
                    ~~~~~~~
!!! error TS2741: Property 'a' is missing in type '{}' but required in type 'A'.
!!! related TS2728 deeplyNestedAssignabilityIssue.ts:2:5: 'a' is declared here:
!!! related TS6500 deeplyNestedAssignabilityIssue.ts:12:17: The expected type comes from property 'another' which is declared here on type '{ another: A; }'
                }
            }
        }
    }
    
Found 2 errors in the same file, starting at: deeplyNestedAssignabilityIssue.ts[90m:22[0m

